--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
   <script src="btz-data.js"></script>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/jpg" href="/assets/favicon.png"/>
 </head>
 <body onLoad="buildHtmlTable('#excelDataTable')">
   <button onclick="exportTableToExcel('excelDataTable', 'btz-data')">Export Table Data To Excel File</button>
