--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <link rel="icon" type="image/jpg" href="/assets/favicon.png"/>
 </head>
 <body onLoad="buildHtmlTable('#excelDataTable')">
-  <button onclick="exportTableToExcel('excelDataTable', 'btz-data')">Export Table Data To Excel File</button>
+  <button onclick="exportTableToExcel('excelDataTable', 'btz-data')">Export to Excel file</button>
   <table id="excelDataTable" border="1"></table>
 </body>
- 
 </html> 
